Close #24 and further improve log readability